--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
   </head>
-  <body></body>
+  <body>
+    
+  </body>
 </html>
