--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TicTacToe</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
   </head>
   <body>
-    
+    <div class="containerAll">
+      <div class="containerTop"></div>
+      <div class="containerMiddle">
+        <div class="gameSquare" id="1, 1"></div>
+        <div class="gameSquare" id="1, 2"></div>
+        <div class="gameSquare" id="1, 3"></div>
+        <div class="gameSquare" id="2, 1"></div>
+        <div class="gameSquare" id="2, 2"></div>
+        <div class="gameSquare" id="2, 3"></div>
+        <div class="gameSquare" id="3, 1"></div>
+        <div class="gameSquare" id="3, 2"></div>
+        <div class="gameSquare" id="3, 3"></div>
+      </div>
+      <div class="containerLeft"></div>
+      <div class="containerRight"></div>
+      <div class="containerBottom"></div>
+    </div>
   </body>
 </html>
