worked out how to create an initial state and then use that to reset back to initial, on click events now work correctly, and buttons pressed correlate to a square being full and now the visual elements clear once reset.. However something has gone wrong with the win section. Investigate wins and possibily simplify code and make it more legable. Still have to add player 2 function and possbly difficulty settings, also end game once win is established

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="container counter">
           <label for="counter">Choose your counter:</label>
           <select name="counter" id="counterChoice">
-            <option value="o">O</option>
-            <option value="x">X</option>
+            <option value="O">O</option>
+            <option value="X">X</option>
           </select>
         </div>
         <div class="container difficulty">
