fixed computer not playing counter when on X token when game is reset, all reset values on page refresh by using autocomplete off

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       <div class="containerLeft">
         <div class="container opponent">
           <label for="opponent">Choose your opponent:</label>
-          <select name="opponent" id="opponentChoice">
-            <option value="computer">Computer</option>
+          <select name="opponent" id="opponentChoice" autocomplete="off">
+            <option value="computer" selected>Computer</option>
             <option value="player">Player</option>
           </select>
         </div>
         <div class="container counter">
           <label for="counter">Choose your counter:</label>
-          <select name="counter" id="counterChoice">
-            <option value="X">X</option>
+          <select name="counter" id="counterChoice" autocomplete="off">
+            <option value="X" selected>X</option>
             <option value="O">O</option>
           </select>
         </div>
         <div class="container difficulty">
           <label for="difficulty">Select difficulty:</label>
-          <select name="difficulty" id="difficultyChoice">
-            <option value="easy">Easy</option>
+          <select name="difficulty" id="difficultyChoice" autocomplete="off">
+            <option value="easy" selected>Easy</option>
             <option value="moderate">Moderate</option>
             <option value="hard">Hard</option>
           </select>
