added dialog box to close off possibility for move making, and added a reset button to it, also fixed the issue of computer making a move after draw or win throwing off the person who actually one first by making a boolen for game complete variable

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <dialog id="dialog">
+      <p id="endGameWinner"></p>
+      <p id="endGameMessage"></p>
+      <button id="closeReset" autofocus>Play Again?</button>
+    </dialog>
     <div class="containerAll">
       <div class="containerTop">
         <div class="title">TicTacToe</div>
