--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
   <body>
     <dialog id="dialog">
-      <p id="endGameWinner"></p>
-      <p id="endGameMessage"></p>
-      <button id="closeReset" autofocus>Play Again?</button>
+      <div id="dialogCont">
+        <p id="endGameWinner"></p>
+        <p id="endGameMessage"></p>
+        <button id="closeReset" autofocus>Play Again?</button>
+      </div>
     </dialog>
     <div class="containerAll">
       <div class="containerTop">
@@ -19,6 +21,7 @@
       </div>
       <div class="containerMiddle">
         <div class="gameboardContainer">
+          <div class="winLine"></div>
           <div class="gameSquare a" id="1,1"></div>
           <div class="gameSquare b" id="1,2"></div>
           <div class="gameSquare c" id="1,3"></div>
